Fix v2: too small page, cannot click anything

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
 }
 
 body {
-  overflow: hidden;
   background: rgb(51, 8, 103);
   background: linear-gradient(
       180deg,
